Use spotify's github client